[gd_scene load_steps=5 format=2]

[ext_resource path="res://SPRITES/player_1-1.png" type="Texture" id=1]
[ext_resource path="res://SCRIPTS/KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://SCENES/bullet.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31 )

[node name="player" type="KinematicBody2D"]
position = Vector2( 468, 400 )
script = ExtResource( 2 )
bullet_scene = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="appear_bullet" type="Position2D" parent="."]
position = Vector2( -72.3621, 0.943878 )

[node name="wait_player" type="Timer" parent="."]
one_shot = true

[node name="wait_bullet" type="Timer" parent="."]

[connection signal="timeout" from="wait_player" to="." method="_on_wait_player_timeout"]
[connection signal="timeout" from="wait_bullet" to="." method="_on_wait_bullet_timeout"]
